# thermostat

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  sensor.rs  switch.rs
